--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.0.0",
     "react-animated-progress-bar": "^1.0.4",
     "react-dom": "^18.0.0",
+    "react-modal": "^3.14.4",
     "react-router-dom": "5.2",
     "react-scripts": "5.0.0",
     "router": "^1.3.6",
@@ -54,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.25"
   }
 }
